UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/PAL__c.object-meta.xml
<CustomObject>
    <label>PAL</label>
    <nameField>
        <label>PAL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>