UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PAL</relationshipLabel>
    <relationshipName>PAL</relationshipName>
    <type>Lookup</type>
</CustomField>