UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date__c</fullName>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>