UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Are_we_the_only_Provider_in_bidding__c.field-meta.xml
<CustomField>
    <fullName>Are_we_the_only_Provider_in_bidding__c</fullName>
    <formula>TEXT(Account_Name__r.Are_we_the_only_Provider__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are we the only Provider in / bidding?</label>
    <type>Text</type>
</CustomField>