UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/BDM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>BDM_Assigned__c</fullName>
    <formula>Account_Name__r.BDM_Assigned__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM Assigned</label>
    <type>Text</type>
</CustomField>