UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Competitor_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Agreement_Type__c</fullName>
    <formula>TEXT(Account_Name__r.Competitor_Agreement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Agreement Type</label>
    <type>Text</type>
</CustomField>