UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Competitor_Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Revenue_Share__c</fullName>
    <formula>TEXT(Account_Name__r.Competitor_Revenue_Share__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Revenue Share</label>
    <type>Text</type>
</CustomField>