UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Contract_Manager_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Manager Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PAL</relationshipName>
    <type>Lookup</type>
</CustomField>