UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Decision_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PAL (Decision Maker Name)</relationshipLabel>
    <relationshipName>PAL1</relationshipName>
    <type>Lookup</type>
</CustomField>