UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Desired_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Effective_Date__c</fullName>
    <label>Desired Effective Date</label>
    <type>Date</type>
</CustomField>