UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Easement__c.field-meta.xml
<CustomField>
    <fullName>Easement__c</fullName>
    <label>Easement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>