UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Exclusive_Wiring_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Wiring_Agreement__c</fullName>
    <label>Exclusive Wiring Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>