UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Frontier_Counter_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Counter_Signed_Date__c</fullName>
    <label>Frontier Counter Signed Date</label>
    <type>Date</type>
</CustomField>