UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Legal_Notice_Person_1__c.field-meta.xml
<CustomField>
    <fullName>Legal_Notice_Person_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Notice Person 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PAL (Legal Notice Person 1)</relationshipLabel>
    <relationshipName>PAL2</relationshipName>
    <type>Lookup</type>
</CustomField>