UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/MDU_Email__c.field-meta.xml
<CustomField>
    <fullName>MDU_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>