UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/MDU_Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>MDU_Milestone_Status__c</fullName>
    <label>Milestone Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coordinate Site Visit</fullName>
            </value>
            <value>
                <fullName>Design Detailed Work Order</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>High Level Price Out</fullName>
            </value>
            <value>
                <fullName>Pending Property Approval</fullName>
            </value>
            <value>
                <fullName>Construction Complete - Add</fullName>
            </value>
            <value>
                <fullName>On Hold - Add</fullName>
            </value>
            <value>
                <fullName>Released to Construction - Add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>