UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/MDU_Notes_and_comments__c.field-meta.xml
<CustomField>
    <fullName>MDU_Notes_and_comments__c</fullName>
    <label>Notes and comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>