UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PAL_Agreement_End_Date__c</fullName>
    <label>PAL Agreement End Date</label>
    <type>Date</type>
</CustomField>