UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_Auto_Renew_Period__c.field-meta.xml
<CustomField>
    <fullName>PAL_Auto_Renew_Period__c</fullName>
    <label>PAL Auto Renew Period</label>
    <length>30</length>
    <type>Text</type>
</CustomField>