UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_Contract_Team_Status_c__c.field-meta.xml
<CustomField>
    <fullName>PAL_Contract_Team_Status_c__c</fullName>
    <label>PAL Contract Team  Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Drafting-OUT</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Redlining-IN</fullName>
            </value>
            <value>
                <fullName>Redlining-OUT</fullName>
            </value>
            <value>
                <fullName>Sent for Signature</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>