UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_Number_of_Buildings__c.field-meta.xml
<CustomField>
    <fullName>PAL_Number_of_Buildings__c</fullName>
    <label>PAL Number of Buildings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>