UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_of_Units__c.field-meta.xml
<CustomField>
    <fullName>PAL_of_Units__c</fullName>
    <label>PAL # of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>