UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>PAL_Parent_ID__c</fullName>
    <formula>Account_Name__r.PAL_Parent_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAL Parent ID</label>
    <type>Text</type>
</CustomField>