UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_Property_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>PAL_Property_Signed_Date__c</fullName>
    <label>PAL Property Signed Date</label>
    <type>Date</type>
</CustomField>