UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_Redlines__c.field-meta.xml
<CustomField>
    <fullName>PAL_Redlines__c</fullName>
    <label>PAL Redlines</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PAL_Contract_Team_Status_c__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>