UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/PAL_Termination_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>PAL_Termination_Notice_Days__c</fullName>
    <label>PAL Termination Notice Days</label>
    <length>30</length>
    <type>Text</type>
</CustomField>