UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Portfolio_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Legal_Name__c</fullName>
    <formula>Account_Name__r.MDU_Portfolio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Legal Name</label>
    <type>Text</type>
</CustomField>