UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Property_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Signed_Date__c</fullName>
    <label>Property Signed Date</label>
    <type>Date</type>
</CustomField>