UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Requested_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Start_Date__c</fullName>
    <label>Requested Start Date</label>
    <type>Date</type>
</CustomField>