UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Residence_Type__c</fullName>
    <formula>TEXT( Account_Name__r.Dwelling_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Residence Type</label>
    <type>Text</type>
</CustomField>