UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Service_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Country__c</fullName>
    <formula>Account_Name__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Country</label>
    <type>Text</type>
</CustomField>