UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Service_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Service_State_Province__c</fullName>
    <formula>Account_Name__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service State/Province</label>
    <type>Text</type>
</CustomField>