UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Service_Street__c.field-meta.xml
<CustomField>
    <fullName>Service_Street__c</fullName>
    <formula>Account_Name__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Street</label>
    <type>Text</type>
</CustomField>