UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/fields/Signatory_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Person_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signatory Person Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PAL</relationshipLabel>
    <relationshipName>PAL</relationshipName>
    <type>Lookup</type>
</CustomField>