UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/recordTypes/Community_Connections_PAL.recordType-meta.xml
<RecordType>
    <fullName>Community_Connections_PAL</fullName>
    <active>true</active>
    <label>Community Connections - PAL</label>
</RecordType>