UCF-APR2.4/ftr main/force-app/main/default/objects/PAL__c/listViews/MDU_PAL.listView-meta.xml
<ListView>
    <fullName>MDU_PAL</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PAL_Source__c</columns>
    <columns>PAL_of_Units__c</columns>
    <filterScope>Everything</filterScope>
    <label>MDU PAL</label>
</ListView>